--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,57 +1,27 @@
-//{
-//  "compilerOptions": {
-//    "types": ["react", "node"],
-//    "outDir": "build",
-//    "module": "esnext",
-//    "target": "ES6",
-//    "lib": ["dom", "dom.iterable", "esnext"],
-//    "baseUrl": "./",
-//    "allowJs": true,
-//    "sourceMap": true,
-//    "jsx": "react",
-//    "declaration": true,
-//    "moduleResolution": "node",
-//    "forceConsistentCasingInFileNames": true,
-//    "noImplicitReturns": true,
-//    "noImplicitThis": true,
-//    "noImplicitAny": true,
-//    "strictNullChecks": true,
-//    "suppressImplicitAnyIndexErrors": true,
-//    "noUnusedLocals": false,
-//    "noUnusedParameters": false,
-//    "allowSyntheticDefaultImports": true,
-//  },
-//  "include": ["./src", "./node_modules/@mui/material/themeCssVarsAugmentation"],
-//  "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js", "**/node_modules/!(@mui)/**", "**/build/**/*"]
-//}
 {
   "compilerOptions": {
-    "target": "ES2022",
+    "outDir": "build",
     "module": "esnext",
+    "target": "ES6",
+    "lib": ["es5", "es6", "dom", "es2015", "es2016", "es2015.Promise", "es2017"],
     "sourceMap": true,
+    "allowJs": false,
     "jsx": "react",
+    "declaration": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
+    "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "composite": true,
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "build",
-    "rootDir": "./src",
-    "noEmit": true,
-    "lib": ["es6", "dom", "dom.iterable", "esnext"],
     "noUnusedLocals": false,
-    "noImplicitAny": true,
-    "baseUrl": "./",
-    "allowJs": true,
+    "noUnusedParameters": false,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["./src", "./node_modules/@mui/material/themeCssVarsAugmentation",
-    "src/**/*.ts*",
-    "src/lib/**/*.js",
-    "../../../node_modules/@mui/material/themeCssVarsAugmentation"],
+  "include": [
+    "./src",
+    "./node_modules/@mui/material/themeCssVarsAugmentation"
+  ],
   "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js", "**/node_modules/!(@mui)/**", "**/build/**/*"]
 }
