--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "data-grid-ultra",
-  "version": "2.1.5",
+  "version": "3.1.2",
   "description": "A react data table implementation using @mui.",
   "author": "xantos008",
   "main": "dist/index.js",
@@ -32,29 +32,29 @@
     "data-grid"
   ],
   "scripts": {
-    "compile": "tsc",
+    "compile": "rm -rf build && tsc && cp package.json build && cp README.md build && cp LICENSE build",
     "clean": "rm -rf dist",
     "build:simple": "npm run clean && rollup -c --bundleConfigAsCjs",
     "build": "npm run clean && rollup -c --bundleConfigAsCjs && npm run postbuild",
-    "postbuild": "cp package.json dist && cp README.md dist && cp LICENSE dist",
-    "publish": "npm run build && npm run pack && npm publish data-grid-ultra-2.1.5.tgz",
-    "pack": "npm pack ./dist/"
+    "postbuild": "cp package.json dist && cp README.md dist && cp LICENSE dist && node ./scripts/runUpdatePackageJson.js",
+    "publish": "npm run compile && npm run build && npm run pack && npm publish data-grid-ultra-3.1.2.tgz",
+    "pack": "npm pack ./build/"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/xantos008/data-grid-ultra.git"
   },
   "dependencies": {
-    "@babel/runtime": "^7.20.7",
+    "@babel/runtime": "^7.21.0",
     "@emotion/styled": "^11.10.5",
-    "@mui/utils": "^5.11.2",
-    "@mui/x-data-grid": "6.0.0-beta.5",
+    "@mui/utils": "^5.12.3",
+    "@mui/x-data-grid": "6.3.1",
     "@types/format-util": "^1.0.2",
     "clsx": "^1.2.1",
-    "data-grid-extra": "^1.1.0",
+    "data-grid-extra": "^3.1.9",
     "exceljs": "^4.3.0",
     "prop-types": "^15.8.1",
-    "reselect": "^4.1.7"
+    "reselect": "^4.1.8"
   },
   "peerDependencies": {
     "@mui/material": "^5.4.1",
@@ -73,5 +73,8 @@
     "rollup-plugin-typescript2": "^0.34.1",
     "tslib": "^2.4.1",
     "typescript": "^4.9.4"
+  },
+  "resolutions": {
+    "csstype": "3.0.10"
   }
 }
