--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "data-grid-ultra",
-  "version": "3.2.1",
+  "version": "3.4.2",
   "description": "A react data table implementation using @mui.",
   "author": "xantos008",
+  "files": [
+    "dist/*"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
@@ -37,7 +40,7 @@
     "build:simple": "npm run clean && rollup -c --bundleConfigAsCjs",
     "build": "npm run clean && rollup -c --bundleConfigAsCjs && npm run postbuild",
     "postbuild": "cp package.json dist && cp README.md dist && cp LICENSE dist && node ./scripts/runUpdatePackageJson.js",
-    "publish": "npm run compile && npm run build && npm run pack && npm publish data-grid-ultra-3.2.1.tgz",
+    "publish": "npm run compile && npm run build && npm run pack && npm publish data-grid-ultra-3.4.2.tgz",
     "pack": "npm pack ./build/"
   },
   "repository": {
@@ -45,34 +48,35 @@
     "url": "https://github.com/xantos008/data-grid-ultra.git"
   },
   "dependencies": {
-    "@babel/runtime": "^7.21.0",
-    "@emotion/styled": "^11.10.5",
-    "@mui/utils": "^5.12.3",
-    "@mui/x-data-grid": "6.3.1",
+    "@babel/runtime": "^7.22.15",
+    "@emotion/styled": "^11.11.0",
+    "@mui/utils": "^5.14.10",
+    "@mui/x-data-grid": "^6.14.0",
     "@types/format-util": "^1.0.2",
-    "clsx": "^1.2.1",
-    "data-grid-extra": "^3.2.1",
+    "clsx": "^2.0.0",
+    "data-grid-extra": "^3.5.1",
     "exceljs": "^4.3.0",
     "prop-types": "^15.8.1",
-    "reselect": "^4.1.8"
+    "reselect": "^4.1.8",
+    "semver": "^7.5.4"
   },
   "peerDependencies": {
-    "@mui/material": "^5.4.1",
-    "@mui/system": "^5.4.1",
+    "@mui/material": "^5.14.10",
+    "@mui/system": "^5.14.10",
     "react": "^17.0.2 || ^18.0.0",
     "react-dom": "^17.0.2 || ^18.0.0"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.22.15",
     "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^24.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-commonjs": "^25.0.4",
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "@rollup/plugin-url": "^8.0.1",
     "@types/node": "^18.14.2",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-typescript2": "^0.34.1",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4"
+    "rollup-plugin-typescript2": "^0.35.0",
+    "tslib": "^2.6.2",
+    "typescript": "^5.2.2"
   },
   "resolutions": {
     "csstype": "3.0.10"
