--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "esnext",
     "target": "ES6",
     "lib": ["es5", "es6", "dom", "es2015", "es2016", "es2015.Promise", "es2017", "es2021"],
-    "sourceMap": true,
+    "sourceMap": false,
     "allowJs": false,
     "jsx": "react",
     "declaration": true,
